### Add about_us.html template in the packaging (HEAD -> main)
>Wed, 12 Oct 2022 05:40:28 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Change copyright Add About us page (origin/main, origin/HEAD)
>Wed, 12 Oct 2022 05:05:22 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Use the website with osgeo docker for GDAL
>Wed, 12 Oct 2022 03:24:12 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Add Production envrionement. In production envrionment, use gdalsrsinfo. In dev, use the same command but through a call to a docker
>Wed, 12 Oct 2022 03:21:18 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Upadte the version of COTS
>Wed, 12 Oct 2022 03:06:25 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Fix count Ws by changing the order of the routes in the router
>Wed, 12 Oct 2022 03:05:29 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Add GML transformation for OGC bridge
>Tue, 11 Oct 2022 18:50:24 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Remove IAU logo Add PADC logo (tag: v0.9.1)
>Tue, 7 Jun 2022 11:23:35 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix comma in setup.py
>Mon, 9 May 2022 15:56:17 +0200
